doctor appoinment time

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -64,3 +64,57 @@
     background: transparent;
   }
 }
+.schedule_body {
+  display: flex;
+}
+.schedule_body .left {
+  border: 1px solid #52782547;
+  width: 140px;
+}
+.schedule_body .left h6 {
+  text-align: center;
+  margin: 0;
+  font-weight: 500;
+  padding: 10px 0px;
+}
+.schedule_body .left .schedule_patient_body {
+  padding-top: 23px;
+}
+.schedule_body .left .schedule_patient_body .single_patient {
+  border-bottom: 1px solid rgba(128, 128, 128, 0.185);
+  padding: 5px 10px;
+}
+.schedule_body .right {
+  border: 1px solid #52782547;
+  flex: 1;
+}
+.schedule_body .right h6 {
+  text-align: center;
+  margin: 0;
+  font-weight: 500;
+  padding: 10px 0px;
+}
+.schedule_body .right .time_slot_body {
+  display: flex;
+  position: relative;
+}
+.schedule_body .right .time_slot_body .slot {
+  border: 1px solid #52782547;
+  flex: 1;
+  text-align: center;
+}
+.schedule_body .right .time_slot_block {
+  width: 100%;
+  height: 30px;
+  border: 1px solid #52782547;
+  margin-bottom: 2.5px;
+  position: relative;
+}
+.schedule_body .right .time_slot_block .time_slot_marker {
+  position: absolute;
+  height: 100%;
+  background-color: #527825b3;
+  left: 10%;
+  top: 0;
+  width: 20%;
+}
